--- a/next-hole/app/globals.css
+++ b/next-hole/app/globals.css
@@ -26,6 +26,8 @@ body {
     --destructive: 0 84.2% 60.2%;
     --successful: 173 58% 39%;
     --successful-foreground: 0 0% 98%;
+    --waiting: 43 74% 66%;
+    --waiting-foreground: 0 0% 98%;
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
